--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ espresso        = "3.5.1"
 lifecycle       = "2.6.2"
 androidx-junit  = "1.1.5"
 recycler        = "1.3.2"
+glide           = "4.16.0"
 
 [libraries]
 koin-android            = { module = "io.insert-koin:koin-android", version.ref = "koin" }
@@ -30,6 +31,7 @@ navigation-ui           = { module = "androidx.navigation:navigation-ui-ktx", ve
 navigation-fragment     = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
 navigation-plugin       = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigation" }
 recycler                = { module = "androidx.recyclerview:recyclerview", version.ref = "recycler" }
+glide                   = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 
 [plugins]
 
