--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,10 @@ lifecycle       = "2.6.2"
 androidx-junit  = "1.1.5"
 recycler        = "1.3.2"
 glide           = "4.16.0"
+converter-gson  = "2.3.0"
+okhttp3         = "4.11.0"
+coroutines      = "1.6.4"
+datastore       = "1.0.0"
 
 [libraries]
 koin-android            = { module = "io.insert-koin:koin-android", version.ref = "koin" }
@@ -32,6 +36,17 @@ navigation-fragment     = { module = "androidx.navigation:navigation-fragment-kt
 navigation-plugin       = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigation" }
 recycler                = { module = "androidx.recyclerview:recyclerview", version.ref = "recycler" }
 glide                   = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+retrofit                = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+logging-interceptor     = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp3" }
+okhttp                  = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp3" }
+converter-gson          = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converter-gson" }
+lifecycle-runtime       = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+lifecycle-process       = { module = "androidx.lifecycle:lifecycle-process", version.ref = "lifecycle" }
+lifecycle-livedata      = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle" }
+lifecycle-viewmodel     = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+coroutines-core         = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-android      = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+datastore               = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 
 [plugins]
 
@@ -54,4 +69,20 @@ test = [
 navigation = [
     "navigation-fragment",
     "navigation-ui"
+]
+retrofit = [
+    "retrofit",
+    "converter-gson",
+    "okhttp",
+    "logging-interceptor"
+]
+lifecycle = [
+    "lifecycle-runtime",
+    "lifecycle-process",
+    "lifecycle-livedata",
+    "lifecycle-viewmodel"
+]
+coroutines = [
+    "coroutines-core",
+    "coroutines-android"
 ]
