--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,8 @@ okhttp3         = "4.11.0"
 coroutines      = "1.6.4"
 datastore       = "1.0.0"
 viewpager2      = "1.0.0"
+agp = "8.1.4"
+org-jetbrains-kotlin-android = "1.9.0"
 
 [libraries]
 koin-android            = { module = "io.insert-koin:koin-android", version.ref = "koin" }
@@ -51,6 +53,8 @@ datastore               = { module = "androidx.datastore:datastore-preferences",
 viewpager2              = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
 
 [plugins]
+com-android-library = { id = "com.android.library", version.ref = "agp" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
 
 
 [bundles]
