--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,12 +39,17 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
         <activity
             android:name=".AuthActivity"
-            android:exported="true"
+            android:exported="false"
+            android:theme="@style/Theme.WBApp">
+        </activity>
+        <activity
+            android:name=".order.OrderActivity"
+            android:exported="false"
             android:theme="@style/Theme.WBApp">
         </activity>
     </application>
